--- a/table-pay/app/build.gradle
+++ b/table-pay/app/build.gradle
@@ -3,15 +3,20 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
 android {
-    compileSdk 32
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.soten.tablepay"
         minSdk 24
-        targetSdk 32
+        targetSdk 31
         versionCode 1
         versionName "1.0"
+
+        buildConfigField "String", "TABLE_PAY_BASE_URL", properties['table_pay_base_url']
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -30,6 +35,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
+        dataBinding true
         viewBinding true
     }
 }
@@ -47,4 +53,13 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation "com.kakao.sdk:v2-user:2.8.6"
+
+    def retrofitVersion = "2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+
+    def lottieVersion = "4.2.1"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 }
