--- a/table-pay/app/src/main/AndroidManifest.xml
+++ b/table-pay/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
         android:theme="@style/Theme.Tablepay">
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name">
+            android:forceDarkAllowed="true"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
