--- a/table-pay/app/build.gradle
+++ b/table-pay/app/build.gradle
@@ -62,4 +62,11 @@ dependencies {
 
     def lottieVersion = "4.2.1"
     implementation "com.airbnb.android:lottie:$lottieVersion"
+
+    implementation 'com.google.mlkit:barcode-scanning:17.0.2'
+
+    implementation "androidx.camera:camera-camera2:1.0.2"
+    implementation "androidx.camera:camera-core:1.0.2"
+    implementation "androidx.camera:camera-lifecycle:1.0.2"
+    implementation "androidx.camera:camera-view:1.1.0-beta02"
 }
